--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
         <div class="display"></div>
         <div class=buttons>
             <div class="row1">
-                <button>AC</button>
-                <button>C</button>
-                <button>%</button>
-                <button>÷</button>
+                <button id="color" value="AC">AC</button>
+                <button id="color" value="C">C</button>
+                <button value="remainder">%</button>
+                <button value="division">÷</button>
             </div>
             <div class="row2">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>+</button>
+                <button value="7">7</button>
+                <button value="8">8</button>
+                <button value="9">9</button>
+                <button value="addition">+</button>
             </div>
             <div class="row3">
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>-</button>
+                <button value="4">4</button>
+                <button value="5">5</button>
+                <button value="6">6</button>
+                <button value="subtraction">-</button>
             </div>
             <div class="row4">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>x</button>
+                <button value="1">1</button>
+                <button value="2">2</button>
+                <button value="3">3</button>
+                <button value="multiplication">x</button>
             </div>
             <div class="row5">
-                <button>0</button>
-                <button>.</button>
-                <button id="equals">=</button>
+                <button value="0">0</button>
+                <button value=".">.</button>
+                <button id="equals" value="equals">=</button>
                 
             </div>
           
