Create function to initiate operat() on click

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="row1">
                 <button id="color" value="AC">AC</button>
                 <button id="color" value="C">C</button>
-                <button value="remainder">%</button>
+                <button value="percentage">%</button>
                 <button value="division">÷</button>
             </div>
             <div class="row2">
